--- a/web/public/index.html
+++ b/web/public/index.html
@@ -15,6 +15,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
    
     <title>React App</title>
+
+    <style>
+      ::-webkit-scrollbar {
+          width: 16px;               
+      }
+
+      ::-webkit-scrollbar-track {
+          background: #141414;
+      }
+
+      ::-webkit-scrollbar-thumb {
+          background-color: #2b2b2b;    
+          border-radius: 20px;       
+          border: 6px solid #141414;  
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
